--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ html {
 }
 
 .header {
-  background-image: linear-gradient(to bottom, rgba(15, 15, 15, 0), rgba(30, 30, 30, 0.85)), url("/img/дотка.jpg");
+  background-image: linear-gradient(to bottom, rgba(15, 15, 15, 0.282), rgba(30, 30, 30, 0.838)), url("/img/дотка.jpg");
   background-size: cover;
   background-position: center;
   min-height: 100vh;
@@ -107,6 +107,10 @@ html {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
   text-align: center;
   flex: 0 0 200px;
+  transition: all 0.5s;
+}
+.header-reklama-fragment:hover {
+  scale: 1.1;
 }
 .header-reklama-fragment__num {
   font-size: 22px;
@@ -114,6 +118,8 @@ html {
   color: #aa2c39;
 }
 .header-reklama-fragment__title {
+  position: relative;
+  z-index: 2;
   font-size: 16px;
   margin: 10px 0;
   color: #fff;
@@ -123,8 +129,27 @@ html {
   color: #ccc;
 }
 
+.first {
+  position: relative;
+  background: url("/img/мипо.webp") no-repeat center center;
+  background-size: cover;
+  z-index: 0;
+}
+
+.first::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.526);
+  z-index: 1;
+  border-radius: 20px;
+}
+
 .main {
-  background: linear-gradient(to top, rgba(15, 15, 15, 0), rgba(30, 30, 30, 0.85)), url("/img/дотка2.jpg") center/cover no-repeat;
+  background: linear-gradient(to top, rgba(15, 15, 15, 0.305), rgba(30, 30, 30, 0.85)), url("/img/дотка2.jpg") center/cover no-repeat;
   padding: 100px 20px;
   display: flex;
   flex-direction: column;
@@ -220,7 +245,7 @@ html {
 }
 
 .hero {
-  background: linear-gradient(to bottom, rgba(15, 15, 15, 0), rgba(30, 30, 30, 0.85)), url("/img/дотка3.jpg") center/cover no-repeat;
+  background: linear-gradient(to bottom, rgba(15, 15, 15, 0.23), rgba(30, 30, 30, 0.85)), url("/img/дотка3.jpg") center/cover no-repeat;
   padding: 100px 20px;
   display: flex;
   flex-direction: column;
@@ -239,6 +264,10 @@ html {
   width: 100%;
   border-radius: 16px;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.6);
+}
+.hero-top-menu {
+  position: absolute;
+  bottom: 120px;
 }
 .hero-top-block {
   max-width: 500px;
