--- a/style.scss
+++ b/style.scss
@@ -120,7 +120,8 @@ html {
             text-align: center;
             flex: 0 0 200px;
             transition: all .5s;
-            &:hover{
+
+            &:hover {
                 scale: 1.1;
             }
 
@@ -156,7 +157,8 @@ html {
 .first::before {
     content: "";
     position: absolute;
-    top: 0; left: 0;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.526);
@@ -294,14 +296,50 @@ html {
         flex-wrap: wrap;
         gap: 40px;
 
+        &-container {
+            position: relative;
+        }
 
         &__photo {
             max-width: 500px;
             width: 100%;
             border-radius: 16px;
             box-shadow: 0 8px 24px rgba(0, 0, 0, 0.6);
+            cursor: pointer;
+            border-bottom-left-radius: 0px;
+            border-bottom-right-radius: 0px;
         }
-        &-menu{
+
+        &-dropdawn {
+            position: absolute;
+            top: 0px;
+            opacity: 0;
+            z-index: -1;
+            transition: all .9s;
+            background: url(/img/gif.gif) no-repeat right/350px 200px,rgb(64, 64, 64);
+            padding: 50px 0;
+            border-bottom-left-radius: 16px;
+            border-bottom-right-radius: 16px;
+            width: 100%;
+
+            &-logo{
+                position: relative;
+                width: 20px;
+                height: 20px;
+            }
+            &.active{
+                opacity: 1;
+                top: 280px;
+                z-index: 0;
+            }
+            &-quality{
+                display: flex;
+                align-items: center;
+                column-gap: 10px;
+            }
+        }
+
+        &-menu {
             position: absolute;
             bottom: 120px;
         }
